--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import BaseLayout from '../layouts/Base.astro'
 		<div class='relative | overflow-hidden | flex flex-col items-center justify-center'>
 			<Header />
 			<AboutMe />
-			<TechIconsBackground />
+			<!-- <TechIconsBackground /> -->
 		</div>
 	</YellowBackground>
-	<Timeline />
+	<!-- <Timeline /> -->
 </BaseLayout>
