--- a/src/components/YellowBackground.astro
+++ b/src/components/YellowBackground.astro
@@ -1,11 +1,16 @@
 <section
-	class='w-full | bg-gradient-to-r from-igarcia-yellow-100 via-igarcia-yellow-100 to-igarcia-orange-100 | clip-path'
+	class='w-full
+    relative
+    overflow-hidden
+    bg-gradient-to-r from-igarcia-yellow-1000 via-igarcia-yellow-1000 to-igarcia-orange-1000
+    clip-path'
 >
 	<slot />
 </section>
 
 <style>
 	.clip-path {
-		clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
 	}
 </style>
