--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -9,33 +9,57 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 >
 	<PeepMeIcon />
 	<div class='px-12 lg:pl-0 | flex flex-col gap-4 lg:gap-6'>
-		<h2 class='text-2xl md:text-4xl lg:text-6xl xl:text-7xl font-bold whitespace-nowrap'>
+		<h2 class='text-2xl md:text-4xl lg:text-6xl font-bold whitespace-nowrap'>
 			#Iván García Ballesteros
 		</h2>
-		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl xl:text-4xl'>
-			👨‍💻💻 <span class='underline decoration-wavy decoration-igarcia-purple-100'
-				>Desarrollador de software</span
+		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl'>
+			👨‍💻💻 <span class='underline decoration-wavy decoration-igarcia-purple-400'
+			>Desarrollador de software</span
 			> amante de todas las tecnologías que engloban el desarrollo web, pero en particular del
-			maravilloso mundo del Front-End ❤, donde quiero seguir especializándome y poder <span
-				class='underline decoration-wavy decoration-igarcia-purple-100'>aportar</span
-			> cada vez más <span class='underline decoration-wavy decoration-igarcia-purple-100'
-				>valor</span
+			maravilloso mundo del Frontend ❤, donde quiero seguir especializándome y poder <span
+				class='underline decoration-wavy decoration-igarcia-purple-400'>aportar</span
+			> cada vez más <span class='underline decoration-wavy decoration-igarcia-purple-400'
+			>valor</span
 			> donde quiera que esté 🚀
 		</p>
-		<div class='flex gap-6 | mt-2 lg:mt-0'>
+		<div class='flex items-center gap-6 | mt-2 lg:mt-0'>
 			<a
-				class='[&>svg]:w-8 [&>svg]:h-8 | cursor-pointer | hover:scale-125'
+				class='[&>svg]:w-10 [&>svg]:h-10 [&>svg]:opacity-80 hover:[&>svg]:opacity-100 | hover:scale-110'
 				href='https://github.com/Garcik96'
 				target='_blank'
 			>
 				<GitHub />
 			</a>
 			<a
-				class='[&>svg]:w-8 [&>svg]:h-8 | cursor-pointer | hover:scale-125'
+				class='[&>svg]:w-10 [&>svg]:h-10 [&>svg]:opacity-80 hover:[&>svg]:opacity-100 | hover:scale-110'
 				href='https://www.linkedin.com/in/iv%C3%A1n-garc%C3%ADa-ballesteros-9414441a8/'
 				target='_blank'
 			>
 				<Linkedin />
+			</a>
+			<a href='/cv-ivan-garcia-ballesteros.pdf' download='cv-ivan-garcia-ballesteros.pdf'>
+				<button
+					class='flex justify-center items-center gap-2 | py-2 px-4 | rounded | bg-igarcia-purple-400 opacity-90 text-white | shadow-xl | hover:scale-110 hover:bg-igarcia-purple-500 hover:opacity-100'
+				>
+					<svg
+						xmlns='http://www.w3.org/2000/svg'
+						class='icon icon-tabler icon-tabler-download'
+						width='24'
+						height='24'
+						viewBox='0 0 24 24'
+						stroke-width='2'
+						stroke='currentColor'
+						fill='none'
+						stroke-linecap='round'
+						stroke-linejoin='round'
+					>
+						<path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
+						<path d='M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2'></path>
+						<path d='M7 11l5 5l5 -5'></path>
+						<path d='M12 4l0 12'></path>
+					</svg>
+					<span>CV</span>
+				</button>
 			</a>
 		</div>
 	</div>
