--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,26 +6,40 @@ import MenuIcon from './icons/MenuIcon.astro'
 	<input type='checkbox' id='menu' hidden class='peer' />
 	<label
 		for='menu'
-		class='relative z-50 lg:hidden peer-checked:[&>.first]:hidden peer-checked:[&>.last]:block'
+		class='relative
+      z-50
+      lg:hidden
+      peer-checked:[&>.first]:hidden
+      peer-checked:[&>.last]:block'
 	>
 		<MenuIcon />
 	</label>
 	<nav
-		class='min-h-screen lg:min-h-0 | py-24 lg:py-0 | absolute lg:static left-0 right-0 top-0 | z-40 | hidden | bg-white lg:bg-inherit bg-opacity-40 backdrop-blur-lg lg:backdrop-blur-0 | peer-checked:block lg:block'
+		class='min-h-screen lg:min-h-0
+      py-24 lg:py-0
+      absolute lg:static left-0 right-0 top-0
+      z-40
+      hidden
+      bg-white lg:bg-inherit bg-opacity-40 backdrop-blur-lg lg:backdrop-blur-0
+      peer-checked:block
+      lg:block'
 		id='navbar'
 	>
 		<ul
-			class='flex flex-col lg:flex-row items-center lg:items-start gap-x-8 gap-y-4 | text-slate-700 font-semibold tracking-tight | [&>li>a]:border-b-2 [&>li>a]:border-b-transparent | [&>li>a]:transition-all'
+			class='flex flex-col lg:flex-row items-center lg:items-start gap-x-8 gap-y-4
+      text-slate-700 font-semibold tracking-tight
+      [&>li>a]:border-b-2 [&>li>a]:border-b-transparent
+      [&>li>a]:transition-all'
 		>
 			<li>
-				<a href='/' class='text-xl | hover:border-b-black hover:text-black'>Sobre mi</a>
+				<a href='/' class='text-xl | hover:border-b-black hover:text-black'>Sobre mí</a>
 			</li>
 
 			<li class='flex lg:flex-col items-center gap-3'>
-				<a href='/#myCV' class='text-xl | hover:border-b-black hover:text-black'>Mi CV</a>
+				<a href='#myCV' class='text-xl | hover:border-b-black hover:text-black'>Experiencia</a>
 				<div class='pl-2 lg:pl-0'>
-					<span class='bg-igarcia-orange-100 rounded | px-2.5 py-0.5 | text-black font-semibold'
-						>Proximamente
+					<span class='bg-igarcia-orange-1000 rounded | px-2.5 py-0.5 | text-black font-semibold'
+					>Proximamente
 					</span>
 				</div>
 			</li>
@@ -33,8 +47,8 @@ import MenuIcon from './icons/MenuIcon.astro'
 			<li class='flex lg:flex-col items-center gap-3'>
 				<a href='/#projects' class='text-xl | hover:border-b-black hover:text-black'>Proyectos</a>
 				<div class='pl-2 lg:pl-0'>
-					<span class='bg-igarcia-orange-100 rounded | px-2.5 py-0.5 | text-black font-semibold'
-						>Proximamente
+					<span class='bg-igarcia-orange-1000 rounded | px-2.5 py-0.5 | text-black font-semibold'
+					>Proximamente
 					</span>
 				</div>
 			</li>
@@ -49,14 +63,11 @@ import MenuIcon from './icons/MenuIcon.astro'
 
 	navbar.querySelectorAll('a').forEach((anchor) => {
 		anchor.addEventListener('click', (_event) => {
-			if (document.body.style.overflowY === 'hidden') {
-				hideOverFlow(false)
-			}
+			menuCheckbox.checked = false
 		})
 	})
 
-	/** @param {boolean} value */
-	function hideOverFlow(value) {
+	function hideOverFlow (value) {
 		if (value) {
 			window.scrollTo(0, 0)
 			document.body.style.overflowY = 'hidden'
@@ -65,9 +76,9 @@ import MenuIcon from './icons/MenuIcon.astro'
 		}
 	}
 
-	menuCheckbox.addEventListener('change', (e) =>
+	menuCheckbox.addEventListener('change', (e) => {
 		e.target.checked ? hideOverFlow(true) : hideOverFlow(false)
-	)
+	})
 
 	mediaQuery.addEventListener('change', (e) => {
 		if (e.matches) {
