--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -14,12 +14,12 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 		</h2>
 		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl'>
 			👨‍💻💻 <span class='underline decoration-wavy decoration-igarcia-purple-400'
-			>Desarrollador de software</span
+				>Desarrollador de software</span
 			> amante de todas las tecnologías que engloban el desarrollo web, pero en particular del
 			maravilloso mundo del Frontend ❤, donde quiero seguir especializándome y poder <span
 				class='underline decoration-wavy decoration-igarcia-purple-400'>aportar</span
 			> cada vez más <span class='underline decoration-wavy decoration-igarcia-purple-400'
-			>valor</span
+				>valor</span
 			> donde quiera que esté 🚀
 		</p>
 		<div class='flex items-center gap-6 | mt-2 lg:mt-0'>
@@ -32,7 +32,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 			</a>
 			<a
 				class='[&>svg]:w-10 [&>svg]:h-10 [&>svg]:opacity-80 hover:[&>svg]:opacity-100 | hover:scale-110'
-				href='https://www.linkedin.com/in/iv%C3%A1n-garc%C3%ADa-ballesteros-9414441a8/'
+				href='https://www.linkedin.com/in/iván-garcía-ballesteros'
 				target='_blank'
 			>
 				<Linkedin />
