--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -37,7 +37,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 			>
 				<Linkedin />
 			</a>
-			<a href='/cv-ivan-garcia-ballesteros.pdf' download='cv-ivan-garcia-ballesteros.pdf'>
+			<a href='/cv-iván-garcía-ballesteros.pdf' download='cv-iván-garcía-ballesteros.pdf'>
 				<button
 					class='flex justify-center items-center gap-2 | py-2 px-4 | rounded | bg-igarcia-purple-400 opacity-90 text-white | shadow-xl | hover:scale-110 hover:bg-igarcia-purple-500 hover:opacity-100'
 				>
