create experience section

--- a/src/components/YellowBackground.astro
+++ b/src/components/YellowBackground.astro
@@ -1,9 +1,5 @@
 <section
-	class='w-full
-    relative
-    overflow-hidden
-    bg-gradient-to-r from-igarcia-yellow-1000 via-igarcia-yellow-1000 to-igarcia-orange-1000
-    clip-path'
+	class='w-full | relative | flex flex-col items-center | overflow-hidden | bg-gradient-to-r from-igarba-yellow-1000 via-igarba-yellow-1000 to-igarba-orange-1000 | clip-path'
 >
 	<slot />
 </section>
