--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import AboutMe from '../components/AboutMe.astro'
+import ExperienceTimeline from '../components/ExperienceTimeline.astro'
+import Footer from '../components/Footer.astro'
 import Header from '../components/Header.astro'
 import TechIconsBackground from '../components/TechIconsBackground.astro'
-import Timeline from '../components/Timeline.astro'
 import YellowBackground from '../components/YellowBackground.astro'
 import BaseLayout from '../layouts/Base.astro'
 ---
@@ -13,5 +14,6 @@ import BaseLayout from '../layouts/Base.astro'
 		<AboutMe />
 		<TechIconsBackground />
 	</YellowBackground>
-	<Timeline />
+	<ExperienceTimeline />
+	<Footer />
 </BaseLayout>
