--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -18,11 +18,11 @@ interface Props {
 const { position, type, name, url, img, title, startDate, endDate } = Astro.props
 
 const getFormatDate = (dateString: string): string => {
-	interface Months {
+	interface IMonths {
 		[key: number]: string
 	}
 
-	const Months: Months = {
+	const Months: IMonths = {
 		0: 'Enero',
 		1: 'Febrero',
 		2: 'Marzo',
@@ -78,18 +78,20 @@ const getDateDiff = (): string => {
 	>
 		<div class='relative | w-full | p-4 | flex flex-col | bg-white | rounded-lg'>
 			{
-				img ? (
-					<a class='my-4' href={url ?? ''} target='_blank'>
-						<img class='w-60' src={`logos/${img}.png`} alt={name} />
-					</a>
-				) : (
-					<span class='text-lg'>{name}</span>
-				)
+				img
+					? (
+						<a class='my-4' href={url ?? ''} target='_blank'>
+							<img class='w-60' src={`logos/${img}.png`} alt={name} />
+						</a>
+					)
+					: (
+						<span class='text-lg'>{name}</span>
+					)
 			}
 
 			<span class='text-2xl font-bold'>{title}</span>
 			<span class='font-semibold'
-				>{getFormatDate(startDate)} - {endDate ? getFormatDate(endDate) : 'Actualidad'}</span
+			>{getFormatDate(startDate)} - {endDate ? getFormatDate(endDate) : 'Actualidad'}</span
 			>
 			{type !== 'school' && <span class='text-gray-500'>({getDateDiff()})</span>}
 
