--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,6 +14,14 @@ const { title = 'Iván García Ballesteros - Frontend Developer' } = Astro.props
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 		<meta name='generator' content={Astro.generator} />
+		<meta property='og:image' content='https://igarba.es/igarba.png' />
+		<meta property='og:title' content='Iván García Ballesteros - Frontend Developer' />
+		<meta
+			property='og:description'
+			content='Portfolio personal de Iván García Ballesteros - Frontend Developer'
+		/>
+		<meta property='og:site_name' content='Iván García Ballesteros - Frontend Developer' />
+		<meta property='og:type' content='website' />
 		<title>{title}</title>
 	</head>
 
