--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -15,7 +15,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl'>
 			👨‍💻💻 <span class='text-igarba-purple-400'>Desarrollador de software</span> amante de todas las
 			tecnologías que engloban el desarrollo web, pero en particular del maravilloso mundo del
-			Frontend ❤, donde quiero seguir especializándome y poder <span
+			Frontend ❤️, donde quiero seguir especializándome y poder <span
 				class='italic text-igarba-purple-400'>aportar</span
 			> cada vez más <span class='italic text-igarba-purple-400'>valor</span> donde quiera que esté
 			🚀.
