--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,4 @@
-<footer
-	class='w-full | overflow-hidden | bg-gradient-to-r from-igarba-yellow-1000 via-igarba-yellow-1000 to-igarba-orange-1000'
->
-	<!-- <div class='block px-6 py-10 mx-auto max-w-7xl'> -->
+<footer>
 	<p
 		class='flex items-center justify-center | px-6 py-10 | font-semibold text-center text-slate-900'
 	>
@@ -14,7 +11,7 @@
 				class='w-12 h-12 sm:w-6 sm:h-6 ml-1'
 				viewBox='0 0 72 72'
 				xmlns='http://www.w3.org/2000/svg'
-			><path
+				><path
 					fill='#D0CFCE'
 					d='m28 37-4 4-1.3301-.4409L11.4549 50.89c-.35-.6201-.57-1.44-.57-2.32V22.06L28 37z'
 				></path><path
@@ -44,7 +41,7 @@
 					stroke-linejoin='round'
 					stroke-miterlimit='10'
 					stroke-width='2'
-				><path
+					><path
 						d='M22.6699 40.5591 11.4549 50.89c-.35-.6201-.57-1.44-.57-2.32V22.06M60.8249 22.01v26.56c0 .86-.2 1.65-.55 2.27L48.9583 40.478M11.5207 21.6493l-.0624-.039M26.8049 36.75l4.47 4.13c.24.22.48.41.72.57 2.4301 1.8 5.26 1.8 7.6801-.01.23-.16.47-.36.69-.56l4.5-4.15'
 					></path><path
 						d='M47.9294 39.536 60.2749 50.84c-.42.77-1.07 1.27-1.79 1.27h-45.26c-.7 0-1.34-.47-1.77-1.22L23.533 39.764'
@@ -55,5 +52,4 @@
 			</svg>
 		</a>
 	</p>
-	<!-- </div> -->
 </footer>
