--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,11 +1,11 @@
 ---
-import ExperienceCard from './ExperienceCard.astro'
-import experiences from '../api/experience.json'
+import EXPERIENCE from '../api/experience.json'
+import ExperienceItem from './ExperienceItem.astro'
 ---
 
 <section
 	id='experience'
-	class='w-full max-w-7xl | px-12 pt-6 pb-14 | relative | flex flex-col items-center gap-16 | overflow-hidden'
+	class='w-full max-w-7xl | px-12 pt-6 pb-14 | flex flex-col items-center gap-16 | overflow-hidden'
 >
 	<h1
 		class='text-5xl md:text-7xl !leading-tight font-bold text-transparent bg-clip-text bg-gradient-to-r from-igarba-orange-800 via-igarba-orange-1000 to-igarba-orange-700'
@@ -13,23 +13,13 @@ import experiences from '../api/experience.json'
 		Experiencia
 	</h1>
 
-	<div
-		class='h-[calc(100%_-_10.5rem)] | border border-igarba-orange-1000 | absolute bottom-6 left-1/2 | transform -translate-x-1/2 | hidden md:block'
-	>
-	</div>
-
-	{
-		experiences.map((experience, index) => (
-			<ExperienceCard
-				position={index % 2 === 0 ? 'left' : 'right'}
-				type={experience.type}
-				name={experience.name}
-				url={experience.url}
-				img={experience.img}
-				title={experience.title}
-				startDate={experience.startDate}
-				endDate={experience.endDate}
-			/>
-		))
-	}
+	<ol class='relative | border-s border-gray-200'>
+		{
+			EXPERIENCE.map((experience) => (
+				<li class='ms-4 | mb-12'>
+					<ExperienceItem {...experience} />
+				</li>
+			))
+		}
+	</ol>
 </section>
