--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,25 +3,26 @@ import '@fontsource-variable/onest'
 
 interface Props {
 	title?: string
+	description?: string
 }
 
-const { title = 'Iván García Ballesteros - Frontend Developer' } = Astro.props
+const {
+	title = 'Iván García Ballesteros - Frontend Developer',
+	description = 'Porfolio personal de Iván García Ballesteros - Frontend Developer'
+} = Astro.props
 ---
 
 <!doctype html>
 <html lang='es' class='scroll-smooth'>
 	<head>
 		<meta charset='UTF-8' />
-		<meta name='description' content='Astro description' />
+		<meta name='description' content={description} />
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 		<meta name='generator' content={Astro.generator} />
 		<meta property='og:image' content='https://igarba.es/igarba.png' />
 		<meta property='og:title' content='Iván García Ballesteros - Frontend Developer' />
-		<meta
-			property='og:description'
-			content='Portfolio personal de Iván García Ballesteros - Frontend Developer'
-		/>
+		<meta property='og:description' content={description} />
 		<meta property='og:site_name' content='Iván García Ballesteros - Frontend Developer' />
 		<meta property='og:type' content='website' />
 		<title>{title}</title>
