--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -83,13 +83,15 @@ const getDateDiff = (): string => {
 
 <h5 class='text-md text-gray-300'>
 	{
-		url ? (
-			<a class='hover:underline hover:cursor-pointer' href={url} target='_blank'>
-				{organization}
-			</a>
-		) : (
-			organization
-		)
+		url
+			? (
+				<a class='hover:underline hover:cursor-pointer' href={url} target='_blank'>
+					{organization}
+				</a>
+			)
+			: (
+				organization
+			)
 	}
 </h5>
 
