--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import AboutMe from '../components/AboutMe.astro'
 import Experience from '../components/Experience.astro'
 import Footer from '../components/Footer.astro'
 import Header from '../components/Header.astro'
+import Projects from '../components/Projects.astro'
 import TechIconsBackground from '../components/TechIconsBackground.astro'
 import YellowBackground from '../components/YellowBackground.astro'
 import Layout from '../layouts/Layout.astro'
@@ -16,6 +17,7 @@ import Layout from '../layouts/Layout.astro'
 	</YellowBackground>
 
 	<Experience />
+	<Projects />
 
 	<YellowBackground>
 		<Footer />
