--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,11 +19,10 @@ const {
 		<meta name='description' content={description} />
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-		<meta name='generator' content={Astro.generator} />
-		<meta property='og:image' content='https://igarba.es/igarba.png' />
-		<meta property='og:title' content='Iván García Ballesteros - Frontend Developer' />
+		<meta property='og:image' content='https://igarba.es/img/igarba.png' />
+		<meta property='og:title' content={title} />
 		<meta property='og:description' content={description} />
-		<meta property='og:site_name' content='Iván García Ballesteros - Frontend Developer' />
+		<meta property='og:site_name' content={title} />
 		<meta property='og:type' content='website' />
 		<title>{title}</title>
 	</head>
