--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,7 +7,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 <div
 	class='w-full h-full max-w-7xl | pb-24 | flex flex-col lg:flex-row items-center justify-start lg:justify-center flex-grow justify-self-center'
 >
-	<PeepMeIcon />
+	<PeepMeIcon className='max-w-md | z-10' />
 	<div class='px-12 lg:pl-0 | flex flex-col gap-4 lg:gap-6'>
 		<h2 class='text-2xl md:text-4xl lg:text-6xl font-bold whitespace-nowrap'>
 			#Iván García Ballesteros
