--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,11 +42,11 @@ import MenuIcon from './icons/MenuIcon.astro'
 
 			<li class='flex md:flex-col items-center gap-3'>
 				<a href='/#projects' class='text-xl | hover:border-b-black hover:text-black'>Proyectos</a>
-				<div class='pl-2 md:pl-0'>
+				<!-- <div class='pl-2 md:pl-0'>
 					<span class='bg-igarba-orange-1000 rounded | px-2.5 py-0.5 | text-black font-semibold'
 					>Proximamente
 					</span>
-				</div>
+				</div> -->
 			</li>
 		</ul>
 	</nav>
@@ -66,7 +66,7 @@ import MenuIcon from './icons/MenuIcon.astro'
 		})
 	})
 
-	function hideOverFlow (value) {
+	function hideOverFlow(value) {
 		if (value) {
 			window.scrollTo(0, 0)
 			document.body.style.overflowY = 'hidden'
