--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,12 @@
 ---
 import ProjectItem from './ProjectItem.astro'
+// import porfolioImage from '/public/img/projects/igarba-2.png'
+
+// const porfolioData = {
+// 	img: porfolioImage,
+// 	title: 'Porfolio',
+// 	description: 'Porfolio personal de Iván García Ballesteros'
+// }
 ---
 
 <section
@@ -12,10 +19,10 @@ import ProjectItem from './ProjectItem.astro'
 		Proyectos
 	</h1>
 
-	<div class='w-full | grid md:grid-cols-10 auto-rows-[20rem] gap-4 md:gap-8'>
-		<ProjectItem colSpan={3} />
-		<ProjectItem colSpan={6} />
-		<ProjectItem colSpan={6} />
-		<ProjectItem colSpan={4} />
+	<div class='w-full | grid md:grid-cols-10 auto-rows-[15rem] sm:auto-rows-[20rem] gap-8'>
+		<ProjectItem className={'md:col-span-6'} />
+		<ProjectItem className={'md:col-span-4'} />
+		<ProjectItem className={'md:col-span-4'} />
+		<ProjectItem className={'md:col-span-6'} />
 	</div>
 </section>
