--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -65,37 +65,39 @@ const getDateDiff = (): string => {
 }
 ---
 
-<div class='absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border border-gray-900 bg-gray-700'>
-</div>
+<div class='absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 bg-slate-700'></div>
 
 <time
 	class=`text-sm leading-none ${type === 'work' ? 'text-igarba-orange-400' : 'text-igarba-purple-0'}`
 >
 	{getFormatDate(startDate)} - {endDate ? getFormatDate(endDate) : 'Actualidad'}
-	{type !== 'school' && <span class='text-gray-500'>&nbsp;({getDateDiff()})</span>}
+	{type !== 'school' && <span class='text-slate-400'>&nbsp;({getDateDiff()})</span>}
 </time>
 
 <h3
-	class=`text-lg font-semibold ${type === 'work' ? 'text-igarba-yellow-700' : 'text-igarba-purple-300'}`
+	class=`md:max-w-[50ch] text-pretty text-lg font-semibold ${type === 'work' ? 'text-igarba-yellow-700' : 'text-igarba-purple-300'}`
 >
 	{title}
-</h3>
-
-<h5 class='text-md text-gray-300'>
-	{
-		url
-			? (
+	<span class='text-md text-gray-300'>
+		-
+		{
+			url ? (
 				<a class='hover:underline hover:cursor-pointer' href={url} target='_blank'>
 					{organization}
 				</a>
-			)
-			: (
+			) : (
 				organization
 			)
-	}
-</h5>
+		}
+	</span>
+</h3>
 
-<div
-	class='mt-3 | lg:max-w-[70ch] | [&>p]:text-base [&>p]:font-normal [&>p]:text-pretty [&>p]:text-white | [&>ul]:my-2 [&>ul]:pl-6 [&>ul]:list-disc [&>ul]:list-outside [&>ul]:text-base [&>ul]:font-normal [&>ul]:text-pretty [&>ul]:text-white'
-	set:html={description}
-/>
+{
+	type === 'work' && (
+		<div class='mt-5'>
+			<a class='bg-slate-700 hover:bg-slate-500 text-white | py-2 px-4 | rounded | cursor-pointer'>
+				Saber más...
+			</a>
+		</div>
+	)
+}
