--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -11,7 +11,7 @@ interface Props {
 	endDate?: string
 }
 
-const { type, organization, url, title, description, startDate, endDate } = Astro.props
+const { type, organization, url, title, startDate, endDate } = Astro.props
 
 const getFormatDate = (dateString: string): string => {
 	interface IMonths {
@@ -81,13 +81,15 @@ const getDateDiff = (): string => {
 	<span class='text-md text-gray-300'>
 		-
 		{
-			url ? (
-				<a class='hover:underline hover:cursor-pointer' href={url} target='_blank'>
-					{organization}
-				</a>
-			) : (
-				organization
-			)
+			url
+				? (
+					<a class='hover:underline hover:cursor-pointer' href={url} target='_blank'>
+						{organization}
+					</a>
+				)
+				: (
+					organization
+				)
 		}
 	</span>
 </h3>
