fix lateral spacing

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,7 +11,7 @@ import ProjectItem from './ProjectItem.astro'
 
 <section
 	id='projects'
-	class='w-full max-w-7xl | px-12 mt-16 mb-14 | flex flex-col items-center gap-16 | overflow-hidden'
+	class='w-full max-w-7xl | px-6 md:px-8 mt-16 mb-14 | flex flex-col items-center gap-8 md:gap-16 | overflow-hidden'
 >
 	<h1
 		class='text-5xl md:text-7xl !leading-tight font-bold text-transparent bg-clip-text bg-gradient-to-r from-igarba-orange-800 via-igarba-orange-1000 to-igarba-orange-700'
@@ -19,7 +19,7 @@ import ProjectItem from './ProjectItem.astro'
 		Proyectos
 	</h1>
 
-	<div class='w-full | grid md:grid-cols-10 auto-rows-[15rem] sm:auto-rows-[20rem] gap-8'>
+	<div class='w-full | grid md:grid-cols-10 auto-rows-[15rem] sm:auto-rows-[20rem] gap-6 md:gap-8'>
 		<ProjectItem className={'md:col-span-6'} />
 		<ProjectItem className={'md:col-span-4'} />
 		<ProjectItem className={'md:col-span-4'} />
