--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,11 +8,13 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 	class='w-full h-full max-w-7xl | pb-24 | flex flex-col lg:flex-row items-center justify-start lg:justify-center flex-grow justify-self-center'
 >
 	<PeepMeIcon className='max-w-md | z-10' />
-	<div class='px-12 lg:pl-0 | flex flex-col gap-4 lg:gap-6'>
-		<h2 class='text-2xl md:text-4xl lg:text-6xl font-bold whitespace-nowrap'>
+	<div class='flex flex-col gap-4 lg:gap-6'>
+		<h2
+			class='text-2xl md:text-4xl lg:text-6xl font-bold whitespace-nowrap text-pretty | px-6 md:px-8'
+		>
 			#Iván García Ballesteros
 		</h2>
-		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl'>
+		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl | text-pretty | px-6 md:px-8'>
 			👨‍💻💻 <span class='text-igarba-purple-400'>Desarrollador de software</span> amante de todas las
 			tecnologías que engloban el desarrollo web, pero en particular del maravilloso mundo del
 			Frontend ❤️, donde quiero seguir especializándome y poder <span
@@ -20,7 +22,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 			> cada vez más <span class='italic text-igarba-purple-400'>valor</span> donde quiera que esté
 			🚀.
 		</p>
-		<div class='flex items-center gap-6 | mt-2 lg:mt-0'>
+		<div class='flex items-center flex-wrap gap-6 | mt-2 lg:mt-0 | px-6 md:px-8'>
 			<a
 				class='flex justify-center items-center gap-2
           py-2 px-4
