--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,7 +5,7 @@ import ExperienceItem from './ExperienceItem.astro'
 
 <section
 	id='experience'
-	class='w-full max-w-7xl | px-12 pt-6 pb-14 | flex flex-col items-center gap-16 | overflow-hidden'
+	class='w-full max-w-7xl | px-6 md:px-8 pt-6 pb-14 | flex flex-col items-center gap-8 md:gap-16 | overflow-hidden'
 >
 	<h1
 		class='text-5xl md:text-7xl !leading-tight font-bold text-transparent bg-clip-text bg-gradient-to-r from-igarba-orange-800 via-igarba-orange-1000 to-igarba-orange-700'
