--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const {
 		<meta name='description' content={description} />
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-		<meta property='og:image' content='https://igarba.es/img/igarba.png' />
+		<meta property='og:image' content='/public/img/igarba.webp' />
 		<meta property='og:title' content={title} />
 		<meta property='og:description' content={description} />
 		<meta property='og:site_name' content={title} />
