add fluid typography

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -10,11 +10,13 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 	<PeepMeIcon className='max-w-md | z-10' />
 	<div class='flex flex-col gap-4 lg:gap-6'>
 		<h2
-			class='text-2xl md:text-4xl lg:text-6xl font-bold whitespace-nowrap text-pretty | px-6 md:px-8'
+			class='text-[clamp(1.5rem,4.62vw_+_0.06rem,3.75rem)] | leading-none | font-bold | whitespace-nowrap | px-6 md:px-8'
 		>
 			#Iván García Ballesteros
 		</h2>
-		<p class='lg:max-w-[60ch] text-lg md:text-xl lg:text-2xl | text-pretty | px-6 md:px-8'>
+		<p
+			class='lg:max-w-[60ch] text-[clamp(1.13rem,1.42vw_+_0.59rem,1.5rem)] leading-snug | text-pretty | px-6 md:px-8'
+		>
 			👨‍💻💻 <span class='text-igarba-purple-400'>Desarrollador de software</span> amante de todas las
 			tecnologías que engloban el desarrollo web, pero en particular del maravilloso mundo del
 			Frontend ❤️, donde quiero seguir especializándome y poder <span
