--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -14,7 +14,7 @@ import ProjectItem from './ProjectItem.astro'
 	class='w-full max-w-7xl | px-6 md:px-8 mt-16 mb-14 | flex flex-col items-center gap-8 md:gap-16 | overflow-hidden'
 >
 	<h1
-		class='text-5xl md:text-7xl !leading-tight font-bold text-transparent bg-clip-text bg-gradient-to-r from-igarba-orange-800 via-igarba-orange-1000 to-igarba-orange-700'
+		class='text-[clamp(3rem,4.58vw_+_1.57rem,4.5rem)] !leading-tight font-bold text-transparent bg-clip-text bg-gradient-to-r from-igarba-orange-800 via-igarba-orange-1000 to-igarba-orange-700'
 	>
 		Proyectos
 	</h1>
