fix confetti on download cv

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -62,6 +62,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 			</a>
 
 			<a
+				id='downloadCV'
 				class='flex justify-center items-center gap-2
           py-2 px-4
           rounded
@@ -99,7 +100,7 @@ import Linkedin from './icons/technologies/Linkedin.astro'
 
 <script>
 	import confetti from 'canvas-confetti'
-	document.body.querySelector('button').addEventListener('click', () =>
+	document.body.querySelector('#downloadCV').addEventListener('click', () =>
 		confetti({
 			particleCount: 200,
 			spread: 90,
